// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should match snapshot 1`] = `
<div
  className="App"
>
  <h1>
    React Wars
  </h1>
  <h1>
    React Wars - Star Wars
  </h1>
  <div
    className="sc-bxivhb bdbxJs"
  />
</div>
`;

exports[`<App /> should match snapshot 2`] = `
<div
  className="App"
>
  <h1>
    React Wars
  </h1>
  <h1>
    React Wars - Star Wars
  </h1>
</div>
`;
